--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@ fieldset {
     border: 2px solid #222;
     background: #E0E1EF;
 }
+
+footer{
+     background: Black;
+        margin-top: 10px;
+        padding: 8px;
+        width: 100%;
+        margin-left: -8px;
+        color: white;
+        text-align: center;
+}
 </style>
 
 <body>
@@ -68,12 +78,12 @@ fieldset {
     </div>
   </fieldset>
 </form>
+<footer>
+    
+    copyright 2016 Antanik Mitra
+    
+</footer>
 
-
-
-
-
- 
 </body>
 
 </html>
